style.css
*{
    margin: 0;
    padding: 0;
}

body{
    background-color: #050505;
    color:rgb(255, 255, 255);
}

.Banner{
    height: 10%;
    width: 100%;
    background-color: #050505;
}

.Projects{
    text-align: center;
    position: absolute;
    font-family: Arial, Helvetica, sans-serif;
    top: 100%;
    left: 10%;
    width: 80%;
}

.project{
    margin: 1%;
    text-align: left;
    border-radius: 5%;
    display: inline-block;
    height: 500px;
    width: 400px;
    background-color: #111111;
    overflow:hidden;
}

.projectsectiontitle{
    font-family: Arial, Helvetica, sans-serif;
    width: 100%;
    text-align: center;
    position:absolute;
    top:90%;
}

.projectImage{
    border-top-right-radius: 5%;
    border-top-left-radius: 5%;
    width: 100%;
    overflow:hidden;
}

.projectTitle{
    margin:3%;
}

.projectDescription{
    margin:3%;
    margin-top: 0%;
}

.projectLinks{
    margin:3%;
    width: 100%;
}

.smallTitle{
    margin:3%;
    margin-bottom: 1%;
}

.codelink:link, .codelink:visited{
    border-radius: 5px;
    padding: 10px 10px;
    text-align: center;
    width: 100px;
    color: rgb(255, 255, 255);
    text-decoration: none;
    background-color: #ff076e;
    display: inline-block;
}

.codelink:hover, .codelink:active {
    background-color: #b3074e;
}

.Header{
    position: static;
    height: 80%;
    width: 100%;
}

.greeting{
    position:absolute;
    top: 50%;
    left: 10%;
    transform: translate(0%, -50%);
    width: 80%;
}

.bigword{
    position: relative;
    max-width: max-content;
    width: 50%;
}

.bigword::after{
    content: "";
    background: linear-gradient(to right, purple, blue);
    background-size: 400% 400%;
    animation: gradient 7s linear infinite alternate;
    position:absolute;
    width: 100%;
    height: 2%;
    border-radius: 10px;
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }
    100%{
        background-position: 50% 100%;
    }
}

.about{
    position: absolute;
    left: 50%;
    top: 0%;
    width: 50%;
    height: 80%;
    overflow:hidden;
}

.title{
    font-size: 50px;
}

.fa-github{
    color: rgb(92, 92, 92);
    padding-right: 1%;
}

.fa-youtube{
    color: rgb(92, 92, 92);
    padding-right: 1%;
}

.fa-twitch{
    color: rgb(92, 92, 92);
    padding-right: 1%;
}

.fa-itch-io{
    color: rgb(92, 92, 92);
    padding-right: 1%;
}

.fa-github:hover{
    color: rgb(255, 255, 255);
}

.fa-youtube:hover{
    color: rgb(255, 255, 255);
}

.fa-twitch:hover{
    color: rgb(255, 255, 255);
}

.fa-itch-io:hover{
    color: rgb(255, 255, 255);
}

.icons{
    position: absolute;
    left: 50%;
    top: 90%;
    width: 50%;
    height: 10%;
    font-size: 0.8vw;
}

.sociallink{
    text-decoration: none;
}

.arrow{
    position: absolute;
    color: rgb(255, 255, 255);
    top: 90%;
    width: 100%;
    font-size: 0.8vw;
    text-align: center;
}

#name{
    font-family: Impacto, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: 12.5vw;
}

#nameprecursor{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 5vw;
}

#aboutme{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.8vw;
}

#logo{
    font-size: 200%;
    font-family: monospace;
    position: static;
    margin:1%;
    max-width: max-content;
}

@media screen and (max-width: 800px) {
    .greeting{
        top: 300px
    }

    .bigword{
        text-align: center;
        width: 100%;
        max-width: none;
    }
    .about{
       left: 0%;
       top: 115%;
       text-align: center;
       width: 100%;
       overflow:visible;
    }
    .bigword::after{
        left: 0%
    }

    .icons{
        position: absolute;
        left: 0%;
        top: 202%;
        text-align: center;
        width: 100%;
        font-size: 1.6vw;
        
    }

    .arrow{
        position:absolute;
        font-size: 1.6vw;
    }

    #aboutme{
        font-size: 3.6vw;
    }

    #name{
        font-size: 25vw;
    }

    #nameprecursor{
        font-size: 10vw;
    }
  }

  @media screen and (max-width: 600px) {
    .project{
        height: 90vw;
        width: 80%;
        background-color: #111111;
    }
  }
/* ... */

